--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       }
 
       button:hover {
-        background-color: #5d7b9c;
+        background-color: #0056b3;
       }
 
       .button-group {
